objects/REST_API_Log__c.object
<CustomObject>
    <fields>
        <fullName>ErrorLineNumber__c</fullName>
        <description>This field will store the line number where the exception occurs the exception.getLineNumber() is used here</description>
        <label>ErrorLineNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Fix__c</fullName>
        <description>This field is used to show the status of exception</description>
        <inlineHelpText>This field is used to show the status of exception</inlineHelpText>
        <label>Estimated Fix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>Hotfix</fullName>
                </value>
                <value>
                    <fullName>Next Sprint</fullName>
                </value>
                <value>
                    <fullName>Needs Prioritization</fullName>
                </value>
                <value>
                    <fullName>No Fix Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>This external id is used to update the records while publishing the event</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Findings_and_Observations__c</fullName>
        <label>Findings and Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Input_Payload__c</fullName>
        <description>This stores the payload of the incoming api request</description>
        <label>Input Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logged_In_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to store the user id of the user who has requested the restful resource</description>
        <label>Logged In User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>REST_API_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>This is used to store the message of the exception</description>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_URL__c</fullName>
        <description>This is used to store the url of the incoming rest request</description>
        <label>Request URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>This is used to store the result of the response for the incoming request</description>
        <label>Result</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>This stores the Service that the REST endpoint provides</description>
        <label>Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>This is used to store the stacktrace of the exception that occured in rest api</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field logs the incoming api as processing and on completion of the business logic marks the field as success or failed</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Investigation In Progress</fullName>
                </value>
                <value>
                    <fullName>Investigation Complete</fullName>
                </value>
                <value>
                    <fullName>Fixed, Pending Deployment</fullName>
                </value>
                <value>
                    <fullName>Fixed and Deployed</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>This stores the Version of the Rest Service</description>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>REST API Log</label>
    <nameField>
        <label>REST API Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REST API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Logs</fullName>
        <columns>NAME</columns>
        <columns>Request_URL__c</columns>
        <columns>Service__c</columns>
        <columns>Version__c</columns>
        <columns>Status__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Result__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Message__c</columns>
        <columns>Logged_In_User__c</columns>
        <columns>Input_Payload__c</columns>
        <columns>ErrorLineNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Logs</label>
    </listViews>
    <listViews>
        <fullName>Failed_Exception_Logs</fullName>
        <columns>NAME</columns>
        <columns>Request_URL__c</columns>
        <columns>Service__c</columns>
        <columns>Version__c</columns>
        <columns>Status__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Result__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Message__c</columns>
        <columns>Logged_In_User__c</columns>
        <columns>Input_Payload__c</columns>
        <columns>ErrorLineNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed,Exception</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Failed/Exception Logs</label>
    </listViews>
</CustomObject>